# manager

./: .gitignore  .gitmodules  .script.swp  .scriptAll.sh.swp  .she.swp  .ycm_extra_conf.py  Makefile  accum-last.hpp  args.sh  boostrap.sh  cat-demo.cpp  cat-intel.cpp  cat-intel.hpp  cat-linux-policy.cpp  cat-linux-policy.hpp  cat-linux.cpp  cat-linux.hpp  cat-policy.cpp  cat-policy.hpp  cat.cpp  cat.hpp  common.cpp  common.hpp  config.cpp  config.hpp  cpucounters.cpp  cpucounters.h  events-intel.cpp  events-intel.hpp  events-libpfm.cpp  events-libpfm.hpp  events-linux.cpp  events-perf.cpp  events-perf.hpp  events.lst  kmeans.cpp  kmeans.hpp  log.cpp  log.hpp  manager.cpp  (+18 more)
MacMSRDriver/: DriverInterface.c  DriverInterface.h  MSRAccessor.cpp  Makefile  PCIDriverInterface.cpp  PCIDriverInterface.h
PCM-Core_Win/: pcm-core-win.cpp  pcm-core-win.vcxproj  stdafx.h
PCM-MSR_Win/: pcm-msr-win.cpp  pcm-msr-win.vcxproj
PCM-Memory_Win/: pcm-memory-win.cpp  pcm-memory-win.vcxproj
PCM-NUMA_Win/: pcm-numa-win.cpp  pcm-numa-win.vcxproj  stdafx.cpp
PCM-PCIE_Win/: pcm-pcie-win.cpp  pcm-pcie-win.vcxproj
PCM-Power_Win/: pcm-power-win.cpp  pcm-power-win.vcxproj
PCM-Service_Win/: AssemblyInfo.cpp  PCMInstaller.cpp  PCMInstaller.h  PCMService.cpp  PCMService.h  PCMService.vcxproj
PCM-TSX_Win/: pcm-tsx-win.cpp  pcm-tsx-win.vcxproj
PCM_Win/: pcm.cpp  pcm.vcxproj  windriver.h
intelpcm.so/: Makefile
libminiperf/: Makefile  dummy.c  events-perf-test.cpp  libminiperf-test.cpp  libminiperf.c  libminiperf.h
scripts/: 1710-interval-total-tables.py  1710-interval-total-tables.sh  1711-comparison-policies-tables.py  1711-comparison-policies-tables.sh  aggdata.py  clean_bad_execs.py  config.bash  generate-mean-repetitions-tables.sh  interval-indivExec-tables-v2.py  interval-indivExec-tables-v2.sh  intervalTablesPerApp.py  intervalTablesPerApp.sh  intervalgraphs.sh  launch.bash  launchINDIV.bash  makoc.py  (+30 more)
test/: .ycm_extra_conf.py  CMakeLists.txt  cat-linux_test.cpp  kmeans_test.cpp
(+16 files in other folders)
